--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -5,8 +5,7 @@ on:
     tags:
       - '*'
     branches:
-      - 'develop'
-      - 'main'
+      - '*'
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -76,6 +75,7 @@ jobs:
         path: build/${{ matrix.filename }}${{ matrix.ext }}
 
   create_release:
+    if: startsWith(github.ref, 'refs/tags/') || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/main'
     needs: [build]
     runs-on: ubuntu-latest
     steps:
