remove non working parameter

--- a/.github/workflows/build_nightly.yml
+++ b/.github/workflows/build_nightly.yml
@@ -46,7 +46,7 @@ jobs:
          #submodules: 'recursive'
          #fetch-depth: '0'
     - run: |
-        git submodule update --init --recursive --filter=blob:none --also-filter-submodules
+        git submodule update --init --recursive --filter=blob:none
         git fetch origin --tags --force
         TAG=$(git describe --tags --exact-match HEAD --exclude=latest --exclude=nightly) || true
         if [ $TAG ]
