--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "SD2PSX Ubuntu",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
+	"image": "mcr.microsoft.com/devcontainers/cpp:ubuntu",
 	"features": {
 		"ghcr.io/devcontainers/features/python:1": {
 			"installTools": true,
@@ -28,19 +28,19 @@
 	"customizations": {
 		"vscode": {
 			"extensions":
-				["twxs.cmake", 
+				["twxs.cmake",
 				"ms-vscode.cmake-tools",
 				"go2sh.cmake-integration-vscode",
 				"llvm-vs-code-extensions.vscode-clangd",
 				"xaver.clang-format",
 				"IBM.output-colorizer"
 				],
-				"settings": {"clangd.path": "/usr/bin/clangd", 
+				"settings": {"clangd.path": "/usr/bin/clangd",
 							"cmake.cmakePath": "cmake",
 						"clangd.arguments": ["--query-driver", "/usr/bin/arm-none-eabi-gcc"]}
 
 			},
-					
+
 		},
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
