[database] avoid venv usage in python
The output file name is now specified in command line
Instead of using requests library, it is now using cmake download functionality
unidecode is now a submodule
Clean up unused argparse code

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/ESP8266SdFat"]
 	path = ext/ESP8266SdFat
 	url = https://github.com/sd2psx/ESP8266SdFat.git
+[submodule "ext/unidecode"]
+	path = ext/unidecode
+	url = https://github.com/avian2/unidecode.git
