--- a/database/CMakeLists.txt
+++ b/database/CMakeLists.txt
@@ -7,6 +7,8 @@ add_custom_target(gamedbobjs_ps1 ALL
                         -D PYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/parse_GameDB.py
                         -D CMAKE_OBJCOPY=${CMAKE_OBJCOPY}
                         -D SYSTEM=ps1
+                        -D "INPUT_URLS=https://github.com/niemasd/GameDB-PSX/releases/latest/download/PSX.data.json"
+                        -D "REPO_ROOT=${CMAKE_SOURCE_DIR}"
                         -P ${CMAKE_CURRENT_SOURCE_DIR}/db_obj_builder.cmake
                     VERBATIM
                     BYPRODUCTS ${GAMEDB_PS1_OBJ})
@@ -26,6 +28,8 @@ add_custom_target(gamedbobjs_ps2 ALL
                         -D PYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/get_and_parse_hdldb.py
                         -D CMAKE_OBJCOPY=${CMAKE_OBJCOPY}
                         -D SYSTEM=ps2
+                        -D "INPUT_URLS=https://github.com/israpps/HDL-Batch-installer/raw/main/Database/gamename.csv"
+                        -D "REPO_ROOT=${CMAKE_SOURCE_DIR}"
                         -P ${CMAKE_CURRENT_SOURCE_DIR}/db_obj_builder.cmake
                     VERBATIM
                     BYPRODUCTS ${GAMEDB_PS2_OBJ})
@@ -44,6 +48,8 @@ add_custom_target(gamedbobjs_coh ALL
                         -D PYTHON_SCRIPT=${CMAKE_CURRENT_SOURCE_DIR}/parse_arcade.py
                         -D CMAKE_OBJCOPY=${CMAKE_OBJCOPY}
                         -D SYSTEM=coh
+                        -D "INPUT_URLS=https://raw.githubusercontent.com/israpps/AthenaEnv/refs/heads/aclauncher/bin/aclauncher/246.json;https://raw.githubusercontent.com/israpps/AthenaEnv/refs/heads/aclauncher/bin/aclauncher/256.json"
+                        -D "REPO_ROOT=${CMAKE_SOURCE_DIR}"
                         -P ${CMAKE_CURRENT_SOURCE_DIR}/db_obj_builder.cmake
                     VERBATIM
                     BYPRODUCTS ${GAMEDB_COH_OBJ})
